# Probabilistic-SDE-Solver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/: README.md  benchmark_utils.py
benchmarks/benes_sde/: benes_dynamics.py  benes_gsf_vs_em.py  benes_marginalised_gsf_em.py  benes_mgsf_gsf_em.py  end_to_end_matrix.py  marginalised_scaling_bench.py  minimal_profiling.py  profile_marginalised_inner_solve.py  section_timing_matrix.py  solver_kernel_matrix.py  time_marginalised_ensemble_paths.py
docs/: README.md
examples/: brownian_algorithm1_accuracy.py  extended_kalman_filter_turn_model_demo.py  extended_kalman_pendulum_demo.py  kalman_car_demo.py  kalman_filter_demo.py  ode_filter_ekf0_demo.py
src/prob_sde/: __init__.py
src/prob_sde/brownian/: __init__.py  brownian.py  pathwise_rhs.py
src/prob_sde/core/: __init__.py  prior_models.py  sde.py
src/prob_sde/filtering/: __init__.py
src/prob_sde/filtering/ode/: __init__.py  filter_step_core.py  ode_filter.py
src/prob_sde/filtering/sde/: __init__.py  gaussian_sde_filter.py  marginalised.py  mixture_sde_filter.py  position_sampling.py  state_helpers.py
src/prob_sde/mixture_utils/: __init__.py  mixture_rollout.py  mixture_scan.py  mixture_tk_init.py
src/prob_sde/solvers/: __init__.py  sde_solver.py
src/prob_sde/utils/: __init__.py  utils.py
tests/: test_brownian.py  test_marginalised.py  test_ode_filter.py  test_sde_solver.py  test_single_step_pure_brownian.py  test_solver_regressions.py
