[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prob-sde"
version = "0.1.4"
description = "Probabilistic SDE solvers via piecewise differentiable Brownian approximation and Gaussian ODE filters"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Prob SDE Contributors" }
]
keywords = ["sde", "probabilistic numerics", "gaussian ode filter", "brownian motion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax >= 0.4.0",
    "jaxlib >= 0.4.0",
    "numpy >= 1.24",
    "matplotlib >= 3.5",
    "tqdm >= 4.05"
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "ruff >= 0.1",
]

[project.urls]
Repository = "https://github.com/tomer279/Probabilistic-SDE-Solver"
Documentation = "https://github.com/tomer279/Probabilistic-SDE-Solver/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "R"]
ignore = ["R0903", "R0913", "R0914", "R0917", "W0718"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
